grammar.js
		source_file: $ => repeat(seq($._statement, optional($._statement_terminator))),

		// --------------- Statement terminator ---------------

		_statement_terminator: $ => choice($._newline, ';'),

		// --------------- Statements ---------------

		_statement: $ => choice(
			$.let_declaration,
			$.const_declaration,
			$.type_alias,
			$.function_declaration,
			$.struct_declaration,
			$.enum_declaration,
			$.trait_declaration,
			$.impl_block,
			$.use_declaration,
			$.for_in_statement,
			$.while_statement,
			$.loop_statement,
			$.return_statement,
			$.break_statement,
			$.continue_statement,
			$.defer_statement,
			$.assignment,
			$.compound_assignment,
			$.expression_statement,
		),

		expression_statement: $ => $._expression,

		// --------------- Let declarations ---------------

		let_declaration: $ => choice(
			$._let_binding,
			$._let_destructure_tuple,
			$._let_destructure_pattern,
			$.let_else,
		),

		_let_binding: $ => seq(
			'let',
			optional('mut'),
			field('name', $.identifier),
			optional(seq(':', field('type', $._type))),
			'=',
			field('value', $._expression),
		),

		_let_destructure_tuple: $ => seq(
			'let',
			optional('mut'),
			'(',
			commaSep1(field('name', $.identifier)),
			optional(','),
			')',
			'=',
			field('value', $._expression),
		),

		_let_destructure_pattern: $ => seq(
			'let',
			optional('mut'),
			field('pattern', $.destructure_pattern),
			'=',
			field('value', $._expression),
		),

		parameter_list: $ => seq(
			'(',
			optional(commaSep1($.parameter)),
			optional(','),
			')',
		),

		parameter: $ => choice(
			$.self_parameter,
			$.typed_parameter,
			$.destructured_parameter,
		),

		self_parameter: $ => 'self',

		typed_parameter: $ => seq(
			field('name', $.identifier),
			':',
			field('type', $._type),
			optional(seq('=', field('default', $._expression))),
		),

		struct_declaration: $ => prec.right(seq(
			repeat($.attribute),
			optional('pub'),
			'struct',
			field('name', $.identifier),
			optional($.type_parameters),
			optional($.struct_body),
		)),

		struct_body: $ => seq(
			'{',
			optional(commaSepNl($.struct_field)),
			optional(','),
			'}',
		),

		struct_field: $ => seq(
			repeat($.attribute),
			field('name', $.identifier),
			':',
			field('type', $._type),
			optional(seq('=', field('default', $._expression))),
		),

		// --------------- Enum declarations ---------------

		impl_block: $ => seq(
			'impl',
			optional($.type_parameters),
			field('trait_or_type', $.identifier),
			optional($.type_arguments),
			optional(seq('for', field('target_type', $.identifier), optional($.type_arguments))),
			'{',
			repeat(choice(
				$.impl_method,
				$.associated_type_definition,
			)),
			'}',
		),

		impl_method: $ => seq(
			repeat($.attribute),
			optional('pub'),
			optional('static'),
			'fn',
			field('name', $.identifier),
			optional($.type_parameters),
			field('parameters', $.parameter_list),
			optional(seq('->', field('return_type', $._type))),
			optional(field('body', $.block)),
		),

		_expression: $ => choice(
			$.identifier,
			$.integer_literal,
			$.float_literal,
			$.string_literal,
			$.interpolated_string,
			$.char_literal,
			$.bool_literal,
			$.array_literal,
			$.array_repeat,
			$.tuple_expression,
			$.hashmap_literal,
			$.hashset_literal,
			$.struct_literal,
			$.grouped_expression,
			$.block,
			$.unary_expression,
			$.binary_expression,
			$.range_expression,
			$.cast_expression,
			$.try_expression,
			$.call_expression,
			$.method_call,
			$.field_access,
			$.index_expression,
			$.slice_expression,
			$.closure,
			$.if_expression,
			$.match_expression,
			$.spawn_expression,
			$.select_expression,
			$.regex_literal,
			$.path_expression,
		),

		// --------------- Literals ---------------

		integer_literal: $ => token(choice(
			// Hex
			seq('0x', /[0-9a-fA-F][0-9a-fA-F_]*/),
			// Octal
			seq('0o', /[0-7][0-7_]*/),
			// Binary
			seq('0b', /[01][01_]*/),
			// Decimal with optional suffix
			seq(/[0-9][0-9_]*/, optional(choice(
				'i8', 'i16', 'i32', 'i64',
				'u8', 'u16', 'u32', 'u64',
			))),
		)),

		string_literal: $ => seq(
			'"',
			repeat($._string_content),
			'"',
		),

		struct_literal: $ => seq(
			optional(field('name', $.identifier)),
			'{',
			optional(seq(
				commaSep1($.struct_field_value),
				optional(','),
			)),
			optional(seq('..', field('base', $._expression))),
			'}',
		),

		struct_field_value: $ => choice(
			// Full: `field: value`
			seq(field('field', $.identifier), ':', field('value', $._expression)),
			// Shorthand: `field` (use variable with same name)
			field('field', $.identifier),
		),

		block: $ => seq(
			'{',
			repeat(seq($._statement, optional($._statement_terminator))),
			optional($._expression),  // trailing expression (block value)
			'}',
		),

		// --------------- Operators ---------------

		binary_expression: $ => choice(
			prec.left(PREC.OR, seq($._expression, '||', $._expression)),
			prec.left(PREC.AND, seq($._expression, '&&', $._expression)),
			prec.left(PREC.BIT_OR, seq($._expression, '|', $._expression)),
			prec.left(PREC.BIT_XOR, seq($._expression, '^', $._expression)),
			prec.left(PREC.BIT_AND, seq($._expression, '&', $._expression)),
			prec.left(PREC.EQUALITY, seq($._expression, choice('==', '!='), $._expression)),
			prec.left(PREC.COMPARISON, seq($._expression, choice('<', '<=', '>', '>='), $._expression)),
			prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>'), $._expression)),
			prec.left(PREC.ADDITIVE, seq($._expression, choice('+', '-'), $._expression)),
			prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice('*', '/', '%'), $._expression)),
		),

		call_expression: $ => prec(PREC.CALL, seq(
			field('callee', choice($.identifier, $.path_expression)),
			optional($.type_arguments),
			field('arguments', $.argument_list),
		)),

		field_access: $ => prec.left(PREC.MEMBER, seq(
			field('object', $._expression),
			choice('.', '::'),
			field('field', choice($.identifier, $.integer_literal)),
		)),

		argument_list: $ => seq(
			'(',
			optional(seq(
				commaSep1($._expression),
				optional(','),
			)),
			')',
		),

		// --------------- Path expression (e.g. Color::Red) ---------------

		path_expression: $ => prec.left(seq(
			$.identifier,
			'::',
			$.identifier,
			optional(choice(
				// Tuple construction: Color::Circle(5.0)
				$.argument_list,
				// Struct construction: Color::Triangle { a: 1.0 }
				seq('{', optional(commaSep1($.struct_field_value)), optional(','), '}'),
			)),
		)),

		// --------------- Closure ---------------

		closure: $ => prec.right(seq(
			'(',
			optional(commaSep1($.closure_parameter)),
			optional(','),
			')',
			'=>',
			field('body', choice($.block, $._expression)),
		)),

		closure_parameter: $ => seq(
			field('name', $.identifier),
			optional(seq(':', field('type', $._type))),
		),

		// --------------- If expression ---------------

		_type: $ => choice(
			$.primitive_type,
			$.type_identifier,
			$.array_type,
			$.tuple_type,
			$.function_type,
			$.generic_type,
			$.associated_type,
			$.option_type,
			$.result_type,
		),

		primitive_type: $ => choice(...PRIMITIVE_TYPES),

		type_identifier: $ => $.identifier,

		function_type: $ => seq('fn', '(', commaSep($._type), ')', '->', $._type),

		type_parameters: $ => seq(
			'<',
			commaSep1($.type_parameter),
			'>',
		),

		type_parameter: $ => seq(
			field('name', $.identifier),
			optional($.type_bounds),
		),

		type_bounds: $ => seq(
			':',
			$.trait_bound,
			repeat(seq('+', $.trait_bound)),
		),

		trait_bound: $ => seq(
			field('trait_name', $.identifier),
			optional($.type_arguments),
		),

		type_arguments: $ => seq(
			'<',
			commaSep1($._type),
			'>',
		),

		// --------------- Attributes ---------------

		attribute: $ => seq(
			'#[',
			field('name', $.identifier),
			optional(seq(
				'(',
				commaSep1($.attribute_argument),
				')',
			)),
			']',
		),

		attribute_argument: $ => choice(
			// Key-value: rename = "field"
			seq(field('key', $.identifier), '=', field('value', $.string_literal)),
			// Flag: untagged
			field('flag', $.identifier),
		),

		// --------------- Comments ---------------

		identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
	},
});

// Helper: comma-separated with at least one element
function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}

// Helper: comma-separated with zero or more elements
function commaSep(rule) {
	return optional(commaSep1(rule));
}

// Helper: comma or newline separated (for struct fields, enum variants)
function commaSepNl(rule) {
	return seq(rule, repeat(seq(optional(','), rule)));
}
